nlw/share/skin/s3/css/screen.css
/* ... */
div#contentContainer h2.tableTitle {
	line-height: 40px;
	font-size: 12px;
	color: #858383;
}

div#contentContainer div#contentTitle {
	width: 99%;
	border-bottom: #dedede 2px solid;
	height: 40px;
}

div#contentContainer div#contentTitle h2.tableTitle {
	float: left;
}

h2.inlineTitle {
	display: inline;
}

div.tableClear {
	height: 20px;
}

a.hideTab {
	float: right;
	line-height: 20px;
	color: #504f4f;
	font-weight: bold;
	display: block;
	background: url(../images/arrowDown.png) no-repeat center left;
	padding-left: 15px;
	text-transform: uppercase;
	font-size: 10px;
	margin-top: 15px;
}

/* contentContainer End */

/* contentColumns Start */
	
div#contentColumns	{
	width: 100%;
	clear: both;
}

div#contentColumns div#contentLeft	{
	width: 73%;
	float: left;
}

body#settingsPage div#contentColumns div#contentLeft	{
	width: 20%;
	float: left;
}


div#contentColumns div#contentLeft h3 {
	font-size: 20px;
	color: #0a94df;
	line-height: 38px;
	font-weight: normal;
}

body#dashBoard div#contentColumns div#contentLeft h4 {
	font-size: 14px;
	color: #0a94df;
	line-height: 30px;
	font-weight: normal;
}

body#dashBoard div#contentColumns div#contentLeft div.widgetHeader h4 {
    color:#505156;
    float:left;
    font-size:14px;
    font-weight:normal;
    line-height:35px;
}

div#contentColumns div#contentLeft div.widgetContent div#myContent h4 {
	float:left;
	font-size:16px;
	line-height:24px;
	margin-left:16px;
	color:#333;
}

div#contentColumns div#contentLeft h5 {
	line-height: 30px;
	font-size: 13px;
}


body#blog div#contentColumns div#contentLeft h3 {
	margin-top: 20px;
}

div#contentColumns div#contentLeft p {
	font-size: 11px;
	color: #000000;
	line-height: 18px;
	margin-top: 20px;
}

body#dashBoard div#contentColumns div#contentLeft p {
	line-height: 15px;

}

div#contentColumns div#contentLeft em {
	font-size: 10px;
	color: #000000;
	line-height: 18px;
	margin-top: 20px;
	font-style: italic;
}

div#contentColumns div#contentLeft .wiki em {
	font-size: inherit;
	color: inherit;
	line-height: inherit;
	margin-top: inherit;
	font-style: italic;
}

div#contentColumns div#contentLeft p strong {
	font-weight: bold;
}

body#blog div#contentColumns div#contentLeft img {
	margin-top: 20px;
	border: #cfcfcf 6px solid;
}

div.messageBox {
	background: #fcf2e3 url(../images/messageBoxTopLeft.png) no-repeat top left;
}

div.messageBox div.messageBoxRight {
	background: url(../images/messageBoxTopRight.png) no-repeat top right;
}


div.messageBox div.messageBoxBottomRight {
	background: url(../images/messageBoxBottomRight.png) no-repeat bottom right;
}

div.messageBox div.messageBoxBottomLeft {
	background: url(../images/messageBoxBottomLeft.png) no-repeat bottom left;
	padding: 0 16px 5px 16px;
}

div.messageBox div.messageBoxBottomLeft em {
	font-style: italic;
	color: #666666;
	line-height: 30px;
}

div.messageBox div.messageBoxBottomLeft em a {
	color: #2068a2;
}

div#contentColumns div#contentRight	{
	width: 25%;
	float: right;
}

body#dashBoard div#contentColumns div#contentRight	{
	width: 30%;
	float: right;
	margin-right: 13px;
}

* html body#dashBoard div#contentColumns div#contentRight {
       margin-right: 8px;
}

body#settingsPage div#contentColumns div#contentRight	{
	width: 78%;
	}


body#settingsPage div#contentColumns div#contentRight form {
	width: 97%;
}

div#contentRight form ul.formButtons {
	float: left;
	margin-top: 13px
}

div#contentRight form ul.formButtons li {
	float: left;
	margin-right: 10px;
}

div#contentRight form ul.formButtons li a {
	float: left;
}

/* contentColumns Start */

/* widget Start*/

div.widget {
	width: 90%;
	margin: 10px 15px 0 0;
	float: right;
}

body#blog div.widget,
body#settingsPage div.widget,
body#contentPage div.widget {
        background: url(../images/widgetTop.png) no-repeat top left;
}

body#dashBoard div.widget.tan {
	margin: 10px 0 0 0;
	background:#fbf2e3 url(../images/widgetTanTop.png) no-repeat top left;
}

body#dashBoard div.widget.regular {
	background: url(../images/dashWidgetTop.png) no-repeat top left;
	margin-right: 0px;
}

body#dashBoard div#contentColumns div#contentLeft div.widget,
body#settingsPage div#contentColumns div#contentLeft div.widget {
	float: left;
	margin: 10px 0 0 0;
	width: 100%; 
}

body#dashBoard div#contentColumns div#contentRight div.widget,
body#settingsPage div#contentColumns div#contentRight div.widget {
	width: 100%;
}

body#blog div.widget div.widgetHeader,
body#settingsPage div.widget div.widgetHeader,
body#contentPage div.widget div.widgetHeader {
	height: 25px;
	background: url(../images/widgetHeader.png) no-repeat top right;
}


body#dashBoard div.widget.tan div.widgetHeader {
	height: 35px;
	background: url(../images/widgetTanHeader.png) no-repeat top right;
}

body#dashBoard div.widget.regular div.widgetHeader {
	height: 35px;
	background: url(../images/dashWidgetHeader.png) no-repeat top right;
}

div.widget div.widgetHeader h4 {
        line-height: 25px;
	font-size: 11px;
	font-weight: bold;
	margin-left: 18px;
}

body#settingsPage  div.widget div.widgetHeader h4 {
        margin-left: 10px;
	line-height: 25px;
}

body#dashBoard div.widget div.widgetHeader h4 {
	line-height: 35px;
	color: #505156;
	font-weight: normal;
	font-size: 14px;
	float: left;
}

body#dashBoard div.widget.tan div.widgetHeader h4 {
	margin-left: 18px;
	color: #0c5a9c;
	border-bottom: #dedede 2px solid;
	width: 90%;
} 


body#dashBoard div.widget div.widgetHeader h4 img,
body#settingsPage div.widget div.widgetHeader h4 img {
	vertical-align: middle;
	margin-right: 10px;
}
div.widget div.widgetHeader h4 a {
	font-weight: normal;
}

div.widget div.widgetContent {
	border-left: #dedede 1px solid;
	background: url(../images/widgetRight.png) repeat-y top right;
	padding: 5px 0 5px 0;
}


div.widgetContent p {
	color: #333;
	margin:0 18px 10px 18px;
	clear: both;
}



body#dashBoard div.widgetContent p {
	line-height: 15px;
}

body#dashBoard div.widget.tan div.widgetContent {
	padding-bottom: 10px;
}
/* ... */

